Fixed when file or folder title is too long

--- a/public/modules/drive/main.css
+++ b/public/modules/drive/main.css
@@ -179,7 +179,7 @@ body {
 .delete {
   position: absolute;
   top: 18px;
-  right: 25px;
+  right: 15px;
   opacity: 0;
   cursor: pointer;
   transition: 0.3s all ease;
@@ -206,7 +206,7 @@ img.icon-type.import-drive {
   background-color: #333;
 }
 .document-title {
-  padding: 10px;
+  padding: 10px 15px 10px 5px;
   margin: 0;
 }
 
